@@ -1,3 +1,9 @@
+2002-09-20  Paolo Maggi  <maggi@athena.polito.it>
+
+	* gedit-plugins-engine.c (gedit_plugins_engine_load_dir): 
+	use G_MODULE_SUFFIX, instead of the hardcoded string ".so"
+	(fix bug #93765, thanks to Benjamin Thery)
+
 2002-09-18  Federico Mena Quintero  <federico@ximian.com>
 
 	* gedit-document.c (gedit_document_save_as_real): Oops, use errno
